# cpp-trees

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Testing/: TAG
include/: abstract_bst.h  binary_tree.h  binary_tree_node.h
src/: CMakeLists.txt  abstract_tree.h
src/binary_tree/: CMakeLists.txt
src/binary_tree/src/: CMakeLists.txt  binary_tree.cpp  binary_tree.h  binary_tree_node.cpp
src/binary_tree/tests/: CMakeLists.txt  simple_test.cpp  test_deletion.cpp  test_insert.cpp
